--- a/causasyefectos.html
+++ b/causasyefectos.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Problemática - TDEC</title>
+    <title>Causas y efectos - TDEC</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
     <link href="assets/img/favicon.png" rel="icon">
@@ -68,7 +68,7 @@
       <!-- ======= INICIO BREADCRUMBS ======= -->
       <section id="breadcrumbs" class="breadcrumbs" style="background-color: #e4e9f0;">
         <div class="container">
-          <h2>PROBLEMÁTICA</h2>
+          <h2>CAUSAS Y EFECTOS DE LA EPILEPSIA</h2>
 
         </div>
       </section>
@@ -88,33 +88,9 @@
   <section class="cifras section-bg-white">
     <div class="container" >
       <div class="section-title" style="margin-bottom:-15px">
-        <h2>MAPA DE STAKEHOLDERS</h2>
+        <h2>ÁRBOL DE PROBLEMAS</h2>
               </br>
-              <a href="assets/img/problematica/stakeholders.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title=""><div class="portfolio-img" ><img src="assets/img/problematica/stakeholders.svg" class="img-fluid" alt="" width="980px" height="980px"></a>
-
-      </div>
-    </div>
-  </section>
-
-<!-- ======= FIN INTRODUCCION ======= -->
-
-<!-- ======= INICIO INTRODUCCION ======= -->
-
-  <section class="cifras section-bg-yellow">
-    <div class="container" >
-      <div class="section-title" style="margin-bottom:-15px">
-        <h2>MAPAS DE EMPATÍA</h2>
-              </br>
-              <a href="assets/img/problematica/empatia_paciente.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title=""><div class="portfolio-img" >
-              <img src="assets/img/problematica/empatia_paciente.svg" class="img-fluid" alt="" width="972.720px" height="560.07px"></a>
-              </br></br></br>
-              <a href="assets/img/problematica/empatia_familia.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title=""><div class="portfolio-img" >
-              <img src="assets/img/problematica/empatia_familia.svg" class="img-fluid" alt="" width="972.720px" height="560.07px"></a>
-              </br></br></br>
-              <a href="assets/img/problematica/empatia_doctor.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title=""><div class="portfolio-img" >
-              <img src="assets/img/problematica/empatia_doctor.svg" class="img-fluid" alt="" width="972.720px" height="560.07px"></a>
-
-
+             <iframe width="100%" height="900px" src="https://miro.com/app/live-embed/o9J_lwm7YUc=/?moveToViewport=-32072,-19301,77963,38728" frameBorder="0" scrolling="no" allowFullScreen></iframe>
 
       </div>
     </div>
@@ -146,7 +122,7 @@
 
 <!-- ======= INICIO REFERENCIAS ======= -->
 
-<section class="cifras section-bg-white">
+<section class="cifras section-bg-yellow">
   <div class="container" >
     <div class="section-title">
       <h1>Referencias</h1></br>
