--- a/proyecto.html
+++ b/proyecto.html
@@ -103,7 +103,7 @@
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos-delay="100">
             <a href="problematica.html"><div class="icon-box">
-            <div class="icon"><img src="assets/img/icons/problematica.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
+            <div class="icon"><img src="assets/img/icons/cerebro.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
               <h4>Problemática</h4>
             </div></a>
           </div>
@@ -157,8 +157,8 @@
           <!-- ======= ANTECEDENTES ======= --> 
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos-delay="100">
-            <a href="contexto.html"><div class="icon-box">
-            <div class="icon"><img src="assets/img/icons/contexto.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
+            <a href=""><div class="icon-box">
+            <div class="icon"><img src="assets/img/icons/requerimientos.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
               <h4>Requerimientos de diseño</h4>
             </div></a>
           </div>
@@ -166,7 +166,7 @@
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos-delay="100">
             <a href=""><div class="icon-box">
-            <div class="icon"><img src="assets/img/icons/problematica.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
+            <div class="icon"><img src="assets/img/icons/entradas.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
               <h4>Entradas y salidas</h4>
             </div></a>
           </div>
@@ -176,8 +176,8 @@
 
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos-delay="100">
-            <a href="causasyefectos.html"><div class="icon-box">
-            <div class="icon"><img src="assets/img/icons/causas.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
+            <a href=""><div class="icon-box">
+            <div class="icon"><img src="assets/img/icons/solucion.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
               <h4>Conceptos de solución</h4>
             </div></a>
           </div>
@@ -186,7 +186,7 @@
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos-delay="100">
             <a href=""><div class="icon-box">
-            <div class="icon"><img src="assets/img/icons/arte.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
+            <div class="icon"><img src="assets/img/icons/problematica.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
               <h4>Proyectos preliminares</h4>
             </div></a>
           </div>
@@ -215,8 +215,8 @@
           <!-- ======= ANTECEDENTES ======= --> 
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch"  data-aos-delay="100">
-            <a href="contexto.html"><div class="icon-box">
-            <div class="icon"><img src="assets/img/icons/contexto.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
+            <a href=""><div class="icon-box">
+            <div class="icon"><img src="assets/img/icons/desarrollo.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
               <h4>Desarrollo de prototipo</h4>
             </div></a>
           </div>
@@ -224,7 +224,7 @@
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch"  data-aos-delay="100">
             <a href=""><div class="icon-box">
-            <div class="icon"><img src="assets/img/icons/problematica.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
+            <div class="icon"><img src="assets/img/icons/validacion.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
               <h4>Validación de prototipo</h4>
             </div></a>
           </div>
@@ -234,8 +234,8 @@
 
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos-delay="100">
-            <a href="causasyefectos.html"><div class="icon-box">
-            <div class="icon"><img src="assets/img/icons/causas.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
+            <a href=""><div class="icon-box">
+            <div class="icon"><img src="assets/img/icons/redaccion.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
               <h4>Redacción del paper</h4>
             </div></a>
           </div>
@@ -244,7 +244,7 @@
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos-delay="100">
             <a href=""><div class="icon-box">
-            <div class="icon"><img src="assets/img/icons/arte.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
+            <div class="icon"><img src="assets/img/icons/poster.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
               <h4>Elaboración del póster</h4>
             </div></a>
           </div>
