--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 
 <head>
   <meta charset="utf-8">
+
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>TDEC</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
+
+
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -230,7 +233,7 @@ accesible para el sistema de salud local.
 
           <div class="col-lg-6">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/team/teamv-1.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/giovanni3.png" class="img-fluid" alt=""></div>
 				
 		
               <div class="member-info">
@@ -246,7 +249,7 @@ accesible para el sistema de salud local.
 
           <div class="col-lg-6 mt-4 mt-lg-0">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="200">
-              <div class="pic"><img src="assets/img/team/teamh-2.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/rodrigo3.png" class="img-fluid" alt="" width="100%"></div>
               <div class="member-info">
                 <h4>Rodrigo Alarcón</h4>
                 <span>Programación</span>
@@ -260,7 +263,7 @@ accesible para el sistema de salud local.
 
           <div class="col-lg-6 mt-4">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="300">
-              <div class="pic"><img src="assets/img/team/ddsavid.png" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/daviddd33.png" class="img-fluid" alt="" ></div>
               <div class="member-info">
                 <h4>David Rodríguez</h4>
                 <span>Electrónica y desarrollo web</span>
@@ -274,7 +277,7 @@ accesible para el sistema de salud local.
 
           <div class="col-lg-6 mt-4">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
-              <div class="pic"><img src="assets/img/team/teamh-4.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/hans3.png" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Hans Ortiz</h4>
                 <span>Investigación</span>
@@ -288,7 +291,7 @@ accesible para el sistema de salud local.
 			
           <div class="col-lg-6 mt-4">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="300">
-              <div class="pic"><img src="assets/img/team/dafffvid.png" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/christian3.png" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Christian Mucha</h4>
                 <span>Modelado 3D</span>
@@ -302,13 +305,13 @@ accesible para el sistema de salud local.
 
           <div class="col-lg-6 mt-4">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
-              <div class="pic"><img src="assets/img/team/tefam-4.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/renzo.png" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Renzo Córdova</h4>
                 <span>Electrónica</span>
                 <p></br></p>
                 <div class="social">
-                 <!--  <a href=""><i class="ri-mail-fill"></i></a> -->
+   
                 </div>
               </div>
             </div>
