--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>TDEC</title>
+  <title>Inicio - TDEC</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -43,33 +43,19 @@
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar">
+
+
+
         <ul>
           <li><a class="nav-link scrollto active" href="#about">Inicio</a></li>
-		  <li><a class="nav-link scrollto" href="#pricing">Problemática</a></li>
-          <li><a class="nav-link scrollto" href="#team">Equipo</a></li>
-
-          <li><a class="nav-link   scrollto" href="proyecto.html">Proyecto</a></li>
-<!--          <li><a class="nav-link scrollto" href="#team">Team</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="#about">Get Started</a></li>-->
+          <li><a class="nav-link scrollto" href="entregables.html">Entregables</a></li>
+          <li><a class="nav-link scrollto" href="equipo.html">Equipo</a></li>
         </ul>
+
+
+
+
+
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
@@ -166,23 +152,7 @@ Nosotros somos un grupo de estudiantes de Ingeniería Biomédica que mediante es
     <section id="pricing" class="pricing">
       <div class="container" data-aos="fade-up">
 
-        <div class="section-title">
-          <h2>Problematica</h2>
-          <p>La epilepsia es la principal causa de consulta neurológica en niños peruanos. Por ejemplo, en el
-servicio de Neuropediatría del Instituto Nacional de Salud del Niño (INSN) ubicado en Breña, los
-últimos nueve meses el 70 % de las atenciones ambulatorias fueron epilepsias y en el área de
-hospitalización aproximadamente el 50% corresponden a este diagnóstico [1]. La epilepsia es un
-trastorno del sistema nervioso central (neurológico) en el que la actividad cerebral se vuelve anormal,
-lo que provoca convulsiones o períodos de comportamientos o sensaciones inusuales y, a veces,
-pérdida de conciencia [2]. Existen estudios en el país que describen las características clínicas de los
-niños epilépticos atendidos en hospitales peruanos como el Cayetano Heredia [3]. Si bien existen
-tratamientos para tratar la epilepsia existen pocas soluciones prácticas y de bajo costo para detectar y
-alertar la presencia de convulsiones en tiempo real, y que además estén orientadas a niños (adultos).
-Las convulsiones pueden conllevar circunstancias peligrosas como caídas, ahogo, problemas de salud
-emocional, y es de suma importancia dar una respuesta rápida cuando estas se presentan.</p>
-        </div>
-		  
-		  
+
 	
     <div class="aboutCopiado">
 
