--- a/problematica.html
+++ b/problematica.html
@@ -73,7 +73,7 @@
       <div class="section-title" style="margin-bottom:-15px">
         <h2>MAPA DE STAKEHOLDERS</h2>
               </br>
-              <a href="assets/img/problematica/stakeholders.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title=""><div class="portfolio-img" ><img src="assets/img/problematica/stakeholders.svg" class="img-fluid" alt="" width="980px" height="980px"></a>
+              <a href="assets/img/problematica/stakeholders.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title=""><div class="portfolio-img" ><img src="assets/img/problematica/stakeholders2.svg" class="img-fluid" alt="" width="1000px"></a>
 
       </div>
     </div>
@@ -81,24 +81,49 @@
 
 <!-- ======= FIN INTRODUCCION ======= -->
 
+
+
+
+
 <!-- ======= INICIO INTRODUCCION ======= -->
 
   <section class="cifras section-bg-yellow">
     <div class="container" >
-      <div class="section-title" style="margin-bottom:-15px">
-        <h2>MAPAS DE EMPATÍA</h2>
-              </br>
+      <div class="section-title">
+        <h2>MAPA DE EMPATÍA DEL PACIENTE</h2>
               <a href="assets/img/problematica/empatia_paciente.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title=""><div class="portfolio-img" >
               <img src="assets/img/problematica/empatia_paciente.svg" class="img-fluid" alt="" width="972.720px" height="560.07px"></a>
-              </br></br></br>
+      </div>
+    </div>
+  </section>
+
+<!-- ======= FIN INTRODUCCION ======= -->
+
+
+<!-- ======= INICIO INTRODUCCION ======= -->
+
+  <section class="cifras section-bg-white">
+    <div class="container" >
+      <div class="section-title">
+        <h2>MAPA DE EMPATÍA DE LA FAMILIA</h2>
               <a href="assets/img/problematica/empatia_familia.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title=""><div class="portfolio-img" >
               <img src="assets/img/problematica/empatia_familia.svg" class="img-fluid" alt="" width="972.720px" height="560.07px"></a>
-              </br></br></br>
+      </div>
+    </div>
+  </section>
+
+<!-- ======= FIN INTRODUCCION ======= -->
+
+
+
+<!-- ======= INICIO INTRODUCCION ======= -->
+
+  <section class="cifras section-bg-yellow">
+    <div class="container" >
+      <div class="section-title">
+        <h2>MAPA DE EMPATÍA DEL MÉDICO</h2>
               <a href="assets/img/problematica/empatia_doctor.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title=""><div class="portfolio-img" >
               <img src="assets/img/problematica/empatia_doctor.svg" class="img-fluid" alt="" width="972.720px" height="560.07px"></a>
-
-
-
       </div>
     </div>
   </section>
