--- a/entregables.html
+++ b/entregables.html
@@ -50,8 +50,8 @@
     <main id="main">
 
       <!-- ======= INICIO BREADCRUMBS ======= -->
-      <div class="breadcrumbs" style="background: #e4e9f0">
-        <div class="container">
+      <div class="breadcrumbs" style="background: #e4e9f0" >
+        <div class="container" data-aos="fade-right" data-aos-delay="20">
 			<h2>ENTREGABLES DEL PROYECTO</h2>
         </div>
       </div>
@@ -66,7 +66,7 @@
 <!-- ======= INICIO PROYECTO ======= -->
 
 <section id="services" class="services section-bg">
-      <div class="container" >
+      <div class="container" data-aos="fade-up" data-aos-delay="20" >
         <div class="section-title">
 			
 			
@@ -240,7 +240,7 @@
 
 
 
-		</br></br>
+		</br>
 
 
 
