--- a/index.html
+++ b/index.html
@@ -241,11 +241,35 @@
       </br>
     </div><!-- End AboutCopiado Section -->
   </div>
-</section><!-- End Pricing Section -->
+</section><!-- End Pricing Sectiostyle="background: #e4e9f0"n -->
 	  
 
 
-
+<section id="pricing" class="pricing section-bg-yellow" >
+  <div class="container" data-aos="fade-up">
+    <div class="aboutCopiado">
+      <div class="container" data-aos="fade-up" style="margin-top: -20px;">
+        <div class="row gx-0" >
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200" style="background: #739bc9 " >
+          </br></br>
+            <img src="assets/img/index/casa.gif" class="img-fluid" alt="" width="600px">
+          </div>
+          <div class="col-lg-6" data-aos="zoom-out" data-aos-delay="200" >
+            <div class="content" >
+              </br>
+              <h2>¿QUÉ ES LA EPILEPSIA?</h2>
+              <p style="text-align:justify;">
+                La epilepsia es una enfermedad crónica no transmisible que afecta al cerebro. Se caracteriza por una actividad eléctrica anormal que provoca convulsiones o comportamientos inusuales, sensaciones y, a veces, pérdida de la conciencia.</br></br>Tiene consecuencias neurológicas, cognitivas, psicológicas y sociales y representa una proporción significativa de la carga mundial de morbilidad. A pesar de la disponibilidad de medicamentos anticonvulsivos eficaces y de bajo costo, más del 75% de las personas con epilepsia en los países de bajos ingresos no tienen acceso al tratamiento ¹.
+              </p>
+            </div>
+            
+          </div>
+        </div>
+      </div>
+      </br>
+    </div><!-- End AboutCopiado Section -->
+  </div>
+</section><!-- End Pricing Section -->
 
 
 
