--- a/problematica.html
+++ b/problematica.html
@@ -130,6 +130,21 @@
 
 <!-- ======= FIN INTRODUCCION ======= -->
 
+<!-- ======= INICIO INTRODUCCION ======= -->
+
+  <section class="cifras section-bg-white">
+    <div class="container" >
+      <div class="section-title">
+        <h2>PLANTEAMIENTO DEL PROBLEMA</h2>
+              <a href="assets/img/problematica/problem.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title=""><div class="portfolio-img" >
+              <img src="assets/img/problematica/problem.svg" class="img-fluid" alt="" width="972.720px" height="560.07px"></a>
+      </div>
+    </div>
+  </section>
+
+<!-- ======= FIN INTRODUCCION ======= -->
+
+
 
 
 
