--- a/entregables.html
+++ b/entregables.html
@@ -106,9 +106,9 @@
 
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos-delay="100">
-            <a href=""><div class="icon-box">
+            <a href="propuesta.html"><div class="icon-box">
             <div class="icon"><img src="assets/img/icons/arte.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
-              <h4>Estado del arte</h4>
+              <h4>Propuesta de solución</h4>
             </div></a>
           </div>
 
