--- a/entregables.html
+++ b/entregables.html
@@ -113,16 +113,21 @@
           </div>
 
 
+          <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos-delay="100">
+            <a href="estadodelarte.html"><div class="icon-box">
+            <div class="icon"><img src="assets/img/icons/arte.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
+              <h4>Estado del arte</h4>
+            </div></a>
+          </div>
+
+
+
+
+
+
 
 
         </div>
-
-
-
-
-
-
-
 
 
 
@@ -179,6 +184,14 @@
 
 
         </div>
+
+
+
+
+
+
+
+
 
 
 
