--- a/entregables.html
+++ b/entregables.html
@@ -146,7 +146,7 @@
           <!-- ======= ANTECEDENTES ======= --> 
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos-delay="100">
-            <a href=""><div class="icon-box">
+            <a href="requerimientos.html"><div class="icon-box">
             <div class="icon"><img src="assets/img/icons/requerimientos.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
               <h4>Requerimientos de diseño</h4>
             </div></a>
