--- a/requerimientos.html
+++ b/requerimientos.html
@@ -94,7 +94,7 @@
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" >
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-wifi"></i></div>
+              <div class="icon"><i class="bx bx-station"></i></div>
               <h4><a>Sistema de alerta con conexión inalámbrica</a></h4>
               <p>Asimismo, a causa de la coyuntura actual se sabe que el paciente no puede estar constantemente en contacto con el médico tratante por ello se toma en consideración que el dispositivo pueda enviar los datos inalámbricamente hacia la nube o base de datos el cual el médico tratante pueda acceder remotamente.</p>
             </div>
@@ -131,7 +131,7 @@
         <div class="row">
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" >
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-waflk"></i></div>
+              <div class="icon"><i class="bx bx-dollar-circle"></i></div>
               <h4><a>Costo accesible</a></h4>
               <p>Debido al contexto social y económico visto anteriormente, el dispositivo requerido debe tener un costo accesible.</p>
             </div>
@@ -139,25 +139,25 @@
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" >
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-vfifle"></i></div>
+              <div class="icon"><i class="bx bx-ruler"></i></div>
               <h4><a>Medidas y peso máximo</a></h4>
-              <p>Nuestro dispositivo, al ser portable, debe ser ligero; es decir, que no impida las actividades del usuario. En magnitud, el dispositivo no debe superar los 500 gramos.</p>
+              <p>Debe ser ligero; es decir, que no impida las actividades del usuario. En magnitud, el dispositivo no debe superar los 500 gramos.</p>
             </div>
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" >
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-target-flock"></i></div>
+              <div class="icon"><i class="bx bx-user-check"></i></div>
               <h4><a>De material no invasivo</a></h4>
-              <p>El dispositivo debe ser amigable con la piel, para ello se tomaron en cuenta las normativas para la elaboración de dispositivos biomédicos. El material por escoger no debe irritar la piel del paciente o causar reacciones no deseadas.</p>
+              <p>Debe ser amigable con la piel. El material por escoger no debe irritar la piel del paciente o causar reacciones no deseadas.</p>
             </div>
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" >
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-wfifi"></i></div>
-              <h4><a>De fácil extracción </a></h4>
-              <p>Nuestro dispositivo debe ser de fácil mantenimiento e intuitivo para el usuario y quienes cuidan de él. Asimismo, los repuestos del dispositivo deben ser de fácil adquisición, así como de un mantenimiento sencillo y amigable con el usuario.</p>
+              <div class="icon"><i class="bx bx-wrench"></i></div>
+              <h4><a>De fácil mantenimiento </a></h4>
+              <p>Los repuestos del dispositivo deben ser de fácil adquisición, así como de un mantenimiento sencillo y amigable con el usuario.<br> </p>
             </div>
           </div>
 
