--- a/requerimientos.html
+++ b/requerimientos.html
@@ -70,33 +70,33 @@
         <div class="row">
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" >
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-walk"></i></div>
-              <h4><a>Portátil</a></h4>
-              <p>Esto se debe a que principalmente se necesita saber el estado del paciente en cada momento para que con el monitoreo saber que acciones tomar y tener presentes las señales de alarma de cada episodio epiléptico.</p>
+              <div class="icon"><i class="bx bx-station"></i></div>
+              <h4><a>Sistema de alerta con conexión inalámbrica</a></h4>
+              <p>Asimismo, a causa de la coyuntura actual se sabe que el paciente no puede estar constantemente en contacto con el médico tratante por ello se toma en consideración que el dispositivo pueda enviar los datos inalámbricamente hacia la nube o base de datos el cual el médico tratante pueda acceder remotamente.</p>
             </div>
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" >
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-vfile"></i></div>
-              <h4><a>Sensibilidad</a></h4>
-              <p>Nuestro dispositivo debe ser capaz de poder monitorear al paciente y detectar de manera efectiva cada posible episodio epiléptico que se presente.</p>
+              <div class="icon"><i class="bx bx-timer"></i></div>
+              <h4><a>Detección en tiempo real.<br>Latencia mínima</a></h4>
+              <p>El tiempo de reacción que los parientes, cuidadores y médicos deben adoptar frente a una crisis epiléptica debe ser en la medida de lo posible durante el episodio epiléptico, por ello nuestro dispositivo tendrá un tiempo de respuesta máximo de 50 segundos.</p>
             </div>
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" >
             <div class="icon-box">
               <div class="icon"><i class="bx bx-target-lock"></i></div>
-              <h4><a>Tasa de falsas alarmas</a></h4>
-              <p>Por otro lado, se tiene en cuenta de que los dispositivos con el uso puedan perder efectividad con el transcurso del tiempo y del uso que le del paciente, por ello se considera que nuestro dispositivo sea capaz de detectar las falsas alarmas que se puedan dar al estar utilizando el dispositivo.</p>
+              <h4><a>Sensible</a></h4>
+              <p>Nuestro dispositivo debe ser capaz de poder monitorear al paciente y detectar de manera efectiva cada posible episodio epiléptico que se presente.</p>
             </div>
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" >
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-station"></i></div>
-              <h4><a>Sistema de alerta con conexión inalámbrica</a></h4>
-              <p>Asimismo, a causa de la coyuntura actual se sabe que el paciente no puede estar constantemente en contacto con el médico tratante por ello se toma en consideración que el dispositivo pueda enviar los datos inalámbricamente hacia la nube o base de datos el cual el médico tratante pueda acceder remotamente.</p>
+              <div class="icon"><i class="bx bx-line-chart-down"></i></div>
+              <h4><a>Baja tasa de falsas alarmas</a></h4>
+              <p>Se tiene en cuenta de que los dispositivos con el uso puedan perder efectividad. Se considera que nuestro dispositivo sea capaz de detectar las falsas alarmas que se puedan dar al estar utilizando el dispositivo.</p>
             </div>
           </div>
 
@@ -104,14 +104,28 @@
           <br>
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" >
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-timer"></i></div>
-              <h4><a href="">Detección en tiempo real. Latencia alrededor de 50 segundos</a></h4>
-              <p>Como se explicó anteriormente en el contexto de la enfermedad, el tiempo de reacción que los parientes, cuidadores y médicos deben adoptar frente a una crisis epiléptica debe ser en la medida de lo posible durante el episodio epiléptico, por ello nuestro dispositivo tendrá un tiempo de respuesta máximo de 50 segundos optimizando en la medida de lo posible detectar el episodio epiléptico de manera inmediata.</p>
+              <div class="icon"><i class="bx bx-fwalk"></i></div>
+              <h4><a href="">Portátil</a></h4>
+              <p>Esto se debe a que principalmente se necesita saber el estado del paciente en cada momento para que con el monitoreo saber que acciones tomar y tener presentes las señales de alarma de cada episodio epiléptico.</p>
             </div>
           </div>
           </center>
 
         </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
