--- a/requerimientos.html
+++ b/requerimientos.html
@@ -72,7 +72,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-station"></i></div>
               <h4><a>Sistema de alerta con conexión inalámbrica</a></h4>
-              <p>Asimismo, a causa de la coyuntura actual se sabe que el paciente no puede estar constantemente en contacto con el médico tratante por ello se toma en consideración que el dispositivo pueda enviar los datos inalámbricamente hacia la nube o base de datos el cual el médico tratante pueda acceder remotamente.</p>
+              <p>El dispositivo deberá enviar los datos inalámbricamente hacia la nube o a una base de datos, a la cual se pueda acceder remotamente.</p>
             </div>
           </div>
 
@@ -80,7 +80,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-timer"></i></div>
               <h4><a>Detección en tiempo real.<br>Latencia mínima</a></h4>
-              <p>El tiempo de reacción que los parientes, cuidadores y médicos deben adoptar frente a una crisis epiléptica debe ser en la medida de lo posible durante el episodio epiléptico, por ello nuestro dispositivo tendrá un tiempo de respuesta máximo de 50 segundos.</p>
+              <p>El tiempo de reacción que los parientes, cuidadores y médicos deben adoptar frente a una crisis epiléptica debe ser en la medida de lo posible durante el episodio epiléptico. El dispositivo tendrá un tiempo de respuesta máximo de 50 segundos.</p>
             </div>
           </div>
 
