--- a/requerimientos.html
+++ b/requerimientos.html
@@ -80,7 +80,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-timer"></i></div>
               <h4><a>Detección en tiempo real.<br>Latencia mínima</a></h4>
-              <p>El tiempo de reacción que los parientes, cuidadores y médicos deben adoptar frente a una crisis epiléptica debe ser en la medida de lo posible durante el episodio epiléptico. El dispositivo tendrá un tiempo de respuesta máximo de 50 segundos.</p>
+              <p>El tiempo de reacción que se debe de adoptar frente a una crisis epiléptica debe ser en la medida de lo posible durante el episodio epiléptico. El dispositivo tendrá un tiempo de respuesta máximo de 50 segundos.</p>
             </div>
           </div>
 
@@ -96,20 +96,11 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-line-chart-down"></i></div>
               <h4><a>Baja tasa de falsas alarmas</a></h4>
-              <p>Se tiene en cuenta de que los dispositivos con el uso puedan perder efectividad. Se considera que nuestro dispositivo sea capaz de detectar las falsas alarmas que se puedan dar al estar utilizando el dispositivo.</p>
+              <p>Se considera que nuestro dispositivo sea capaz de detectar las falsas alarmas que se puedan dar al estar utilizando el dispositivo.</p>
             </div>
           </div>
 
-          <center>
-          <br>
-          <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" >
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-fwalk"></i></div>
-              <h4><a href="">Portátil</a></h4>
-              <p>Esto se debe a que principalmente se necesita saber el estado del paciente en cada momento para que con el monitoreo saber que acciones tomar y tener presentes las señales de alarma de cada episodio epiléptico.</p>
-            </div>
-          </div>
-          </center>
+
 
         </div>
 
