--- a/entregables.html
+++ b/entregables.html
@@ -113,10 +113,40 @@
           </div>
 
 
+
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+        <div class="section-title ">
+        </br></br>
+          <h2>Estado del arte</h2>
+        </div>
+        <div class="row">
+      
+          <!-- ======= ANTECEDENTES ======= --> 
+
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos-delay="100">
-            <a href="estadodelarte.html"><div class="icon-box">
-            <div class="icon"><img src="assets/img/icons/arte.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
-              <h4>Estado del arte</h4>
+            <a href="trabajosdeinvestigacion.html"><div class="icon-box">
+            <div class="icon"><img src="assets/img/icons/trabajosdeinvestigacion.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
+              <h4>Trabajos de investigación</h4>
+            </div></a>
+          </div>
+
+
+          <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos-delay="100">
+            <a href="sistemascomerciales.html"><div class="icon-box">
+            <div class="icon"><img src="assets/img/icons/sistemascomerciales.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
+              <h4>Sistemas comerciales</h4>
             </div></a>
           </div>
 
@@ -124,10 +154,58 @@
 
 
 
+          <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos-delay="100">
+            <a href="patentes.html"><div class="icon-box">
+            <div class="icon"><img src="assets/img/icons/patentes.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
+              <h4>Patentes</h4>
+            </div></a>
+          </div>
+
+
+
+          <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos-delay="100">
+            <a href="normativa.html"><div class="icon-box">
+            <div class="icon"><img src="assets/img/icons/normativa.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
+              <h4>Normativa</h4>
+            </div></a>
+          </div>
+
 
 
 
         </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
