--- a/contexto.html
+++ b/contexto.html
@@ -53,7 +53,7 @@
       <section id="breadcrumbs" class="breadcrumbs" >
         <div class="container">
           <h2>CONTEXTO NACIONAL, REGIONAL Y GLOBAL DE LA EPILEPSIA</h2>
-
+          <p>La primera fase para la realización del proyecto de innovación es la empatización. Esta incluye. En la primera parte del proyecto solución, se definió el concepto de epilepsia, así como </p>
         </div>
       </section>
       <!-- ======= FIN BREADCRUMBS ======= -->
