--- a/entregables.html
+++ b/entregables.html
@@ -232,7 +232,7 @@
 
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos-delay="100">
-            <a href=""><div class="icon-box">
+            <a href="entradasysalidas.html"><div class="icon-box">
             <div class="icon"><img src="assets/img/icons/entradas.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
               <h4>Entradas y salidas</h4>
             </div></a>
@@ -243,7 +243,7 @@
 
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos-delay="100">
-            <a href=""><div class="icon-box">
+            <a href="conceptosdesolucion.html"><div class="icon-box">
             <div class="icon"><img src="assets/img/icons/solucion.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
               <h4>Conceptos de solución</h4>
             </div></a>
@@ -252,7 +252,7 @@
 
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos-delay="100">
-            <a href=""><div class="icon-box">
+            <a href="proyectospreliminares.html"><div class="icon-box">
             <div class="icon"><img src="assets/img/icons/problematica.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
               <h4>Proyectos preliminares</h4>
             </div></a>
