--- a/problematica.html
+++ b/problematica.html
@@ -52,7 +52,7 @@
       <section id="breadcrumbs" class="breadcrumbs" style="background-color: #e4e9f0;">
         <div class="container">
           <h2>PROBLEMÁTICA</h2>
-
+             <p>En la primera etapa del proyecto se desarrolló la empatización. En esta fase se estudió la problemática a resolver, así como a la audiencia para la cual se está diseñando el producto. En el presente entregable, se definen los principales stakeholders y se detallan los deseos, pensamientos, acciones y sentimientos de cada uno de los involucrado a través del desarrollo de mapas de empatía.</p>
         </div>
       </section>
       <!-- ======= FIN BREADCRUMBS ======= -->
