--- a/requerimientos.html
+++ b/requerimientos.html
@@ -71,7 +71,7 @@
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" >
             <div class="icon-box">
               <div class="icon"><i class="bx bx-station"></i></div>
-              <h4><a>Sistema de alerta con conexión inalámbrica</a></h4>
+              <h4><a>Conexión inalámbrica</a></h4>
               <p>El dispositivo deberá enviar los datos inalámbricamente hacia la nube o a una base de datos, a la cual se pueda acceder remotamente.</p>
             </div>
           </div>
@@ -79,7 +79,7 @@
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" >
             <div class="icon-box">
               <div class="icon"><i class="bx bx-timer"></i></div>
-              <h4><a>Detección en tiempo real.<br>Latencia mínima</a></h4>
+              <h4><a>Detección en tiempo real</a></h4>
               <p>El tiempo de reacción que se debe de adoptar frente a una crisis epiléptica debe ser en la medida de lo posible durante el episodio epiléptico. El dispositivo tendrá un tiempo de respuesta máximo de 50 segundos.</p>
             </div>
           </div>
