--- a/requerimientos.html
+++ b/requerimientos.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Requerimientos de diseño</title>
+    <title>Requerimientos de diseño - TDEC</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
     <link href="assets/img/favicon.png" rel="icon">
@@ -171,10 +171,15 @@
         </div>
 
 
+<br><br><br><br>
+<div class="section-title">
+          <h2>LISTA DE REQUERIMIENTOS</h2>
+        </div>
 
 
-
-
+          <center>
+          <iframe src="https://docs.google.com/viewer?srcid=16bkvWuJ9YEg9yyl8pUnYqzl5r0X0QfPe&pid=explorer&efh=false&a=v&chrome=false&embedded=true" width="63%" height="700px"></iframe>
+          </center>
 
 
 
