--- a/entradasysalidas.html
+++ b/entradasysalidas.html
@@ -20,7 +20,7 @@
     <link href="assets/css/style.css" rel="stylesheet">
   </head>
 
-  <body>
+  <body oncontextmenu="return false;">
 
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top header-inner-pages">
@@ -58,25 +58,24 @@
 
 
   <!-- ======= Services Section ======= -->
-  <section id="services" class="services section-bg">
-    <div class="container" >
+  <section id="services" class="services section-bg-white">
+    <div class="container">
       <div class="section-title">
         <h2>Esquema de funciones</h2>
       </div>
 
 
+<div style="width: 100%;"><div style="margin-bottom: -105px ;margin-top: -50px;position: relative; padding-bottom: 56.08%; padding-top: 0; height: 0;"><iframe frameborder="0" width="1337.295690936107" height="750" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://view.genial.ly/61a0005c1414000d4cd5d3ef" type="text/html" allowscriptaccess="always" allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div> </div>
 
-          <div class="cifras section-bg" style="margin-top:-55px">
-      <center>
-              <a href="assets/img/entradasysalidas/esquemadefunciones.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title=""><div class="portfolio-img" ><img src="assets/img/entradasysalidas/esquemadefunciones.png" class="img-fluid" alt="" width="80%"></a>
-      </center>     
-    </div>
+</div>
 
+</section>
 
 
-    </div>
-  </section><!-- End Services Section -->
 
+<div>
+  <br><br><br><br><br>
+</div>
 
 
 
