--- a/requerimientos.html
+++ b/requerimientos.html
@@ -79,7 +79,7 @@
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" >
             <div class="icon-box">
               <div class="icon"><i class="bx bx-timer"></i></div>
-              <h4><a>Detección en tiempo real</a></h4>
+              <h4><a>Detección instantánea</a></h4>
               <p>El tiempo de reacción que se debe de adoptar frente a una crisis epiléptica debe ser en la medida de lo posible durante el episodio epiléptico. El dispositivo tendrá un tiempo de respuesta máximo de 50 segundos.</p>
             </div>
           </div>
@@ -95,7 +95,7 @@
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" >
             <div class="icon-box">
               <div class="icon"><i class="bx bx-line-chart-down"></i></div>
-              <h4><a>Baja tasa de falsas alarmas</a></h4>
+              <h4><a>Baja tasa de error</a></h4>
               <p>Se considera que nuestro dispositivo sea capaz de detectar las falsas alarmas que se puedan dar al estar utilizando el dispositivo.</p>
             </div>
           </div>
@@ -145,7 +145,7 @@
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" >
             <div class="icon-box">
               <div class="icon"><i class="bx bx-ruler"></i></div>
-              <h4><a>Medidas y peso máximo</a></h4>
+              <h4><a>Tamaño adecuado</a></h4>
               <p>Debe ser ligero; es decir, que no impida las actividades del usuario. En magnitud, el dispositivo no debe superar los 500 gramos.</p>
             </div>
           </div>
@@ -170,32 +170,42 @@
 
         </div>
 
-
-<br><br><br><br>
-<div class="section-title">
-          <h2>LISTA DE REQUERIMIENTOS</h2>
-        </div>
-
-
-          <center>
-          <iframe src="https://docs.google.com/viewer?srcid=16bkvWuJ9YEg9yyl8pUnYqzl5r0X0QfPe&pid=explorer&efh=false&a=v&chrome=false&embedded=true" width="63%" height="700px"></iframe>
-          </center>
-
-
-
-
-
-
-
-
-
-
+<br>
       </div>
     </section><!-- End Services Section -->
 
 
 
 
+
+
+
+
+
+<section id="services" class="services section-bg-white">
+  <div class="container" >
+
+    <div class="section-title">
+      <br><h2>LISTA DE REQUERIMIENTOS</h2>
+    </div>
+
+
+
+
+    <center>
+    <div style="width: 80%;"><div style="margin-bottom: -104px; position: relative; padding-bottom: 200.00%; padding-top: 0; height: 0;"><iframe frameborder="0" width="800" height="1600" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://view.genial.ly/61a0895fe638130d9868da28" type="text/html" allowscriptaccess="always" allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div> </div>
+    </center>
+
+
+
+
+   
+  </div>
+</section>
+
+<div>
+  <br><br><br><br><br>
+</div>
 
 
 
