--- a/entradasysalidas.html
+++ b/entradasysalidas.html
@@ -61,7 +61,7 @@
   <section id="services" class="services section-bg-white">
     <div class="container">
       <div class="section-title">
-        <h2>Esquema de funciones</h2>
+        <h2>Esquema de funciones</h2><br><br>
       </div>
 
 
