--- a/entregables.html
+++ b/entregables.html
@@ -290,17 +290,17 @@
           <!-- ======= ANTECEDENTES ======= --> 
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch"  data-aos-delay="100">
-            <a href=""><div class="icon-box">
+            <a href="protocolodefuncionamiento.html"><div class="icon-box">
             <div class="icon"><img src="assets/img/icons/desarrollo.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
-              <h4>Desarrollo de prototipo</h4>
+              <h4>Protocolo de funcionamiento</h4>
             </div></a>
           </div>
 
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch"  data-aos-delay="100">
-            <a href=""><div class="icon-box">
+            <a href="disenodeinterfazgrafica.html"><div class="icon-box">
             <div class="icon"><img src="assets/img/icons/validacion.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
-              <h4>Validación de prototipo</h4>
+              <h4>Diseño de interfaz gráfica</h4>
             </div></a>
           </div>
 
@@ -309,18 +309,18 @@
 
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos-delay="100">
-            <a href=""><div class="icon-box">
+            <a href="modeladoysimulacion3d"><div class="icon-box">
             <div class="icon"><img src="assets/img/icons/redaccion.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
-              <h4>Redacción del paper</h4>
+              <h4>Modelado y simulación 3D</h4>
             </div></a>
           </div>
 
 
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos-delay="100">
-            <a href=""><div class="icon-box">
+            <a href="Informe final.pdf"><div class="icon-box">
             <div class="icon"><img src="assets/img/icons/poster.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
-              <h4>Elaboración del póster</h4>
+              <h4>Informe final</h4>
             </div></a>
           </div>
 
