--- a/entregables.html
+++ b/entregables.html
@@ -309,7 +309,7 @@
 
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos-delay="100">
-            <a href="modeladoysimulacion3d"><div class="icon-box">
+            <a href="modeladoysimulacion3d.html"><div class="icon-box">
             <div class="icon"><img src="assets/img/icons/redaccion.png" alt="" class="img-fluid animated" width="auto" style="  "></div>
               <h4>Modelado y simulación 3D</h4>
             </div></a>
