--- a/disenodeinterfazgrafica.html
+++ b/disenodeinterfazgrafica.html
@@ -62,7 +62,7 @@
 <section id="services" class="services section-bg">
   <div class="container" >
 
-    <div class="section-title" style="padding-bottom: 30px;">
+    <div class="section-title" style="padding-bottom: 60px;">
       <br><h2>APLICACIÓN MOVIL PARA EL USO DE LOS CUIDADORES</h2>
     </div>
 
@@ -155,7 +155,16 @@
   </div>
   </section>
 
+<section id="services" class="services section-bg-white">
+<div class="container" >
 
+    <center>
+<div style="width: 100%;"><div style="margin-bottom: -105px; position: relative; padding-bottom: 56.25%; padding-top: 0; height: 0;"><iframe frameborder="0" width="1200" height="675" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://view.genial.ly/61bb4db25605c30d87b01d18" type="text/html" allowscriptaccess="always" allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div> </div>
+    </center>
+
+
+  </div>
+  </section>
 
   <div style="background-color:white;">
   <br><br><br><br>
